tests/baselines/reference/cloduleWithDuplicateMember2.errors.txt
==== tests/cases/compiler/cloduleWithDuplicateMember2.ts (1 errors) ====
    class C {
        set x(y) { }
        static set y(z) { }
    }
    
    module C {
        export var x = 1;
    }
    module C {
        export function x() { }
                        ~
!!! error TS2000: Duplicate identifier 'x'.
    }